src/main/css/bdrs/bdrs.css
/* ... */
.alaSightingsContent .columnBanner {
    font-size: 1.5em;
    background-color: #C2D1E0;
    border-width: 1px 0px 1px 0px;
    border-style: solid; 
    border-color: #2D4977;
    padding: 0.5em 0.5em 0.5em 0.5em;
    margin-bottom: 0.5em;
}

.alaSightingsTable {
    width: 100%;
}

#alaSightingsTableHeader {
	font-size: 1em;
	font-weight: bolder;
}

div.alaSightingsTableHeader {
	margin-top: 8px;
}

div.alaSightingsTableHeaderDoubleLine {
	margin-top: 5px;
}

div.alaSightingsTableHeaderDoubleLineArrows {
    margin-top: 5px;
}

/* for single line header items */
.sortArrows {
	margin-top: 5px;
}

/* for double line header items */
.alaSightingsTableHeaderDoubleLine .sortArrows {
	margin-top: 10px;
}

.alaSightingsTable .sighting {
    border-bottom: 1px solid #D9D9D9;
    padding: 0.5em 0em 0.5em 0em; 
}

.alaSightingsTable .sighting .recordType,
.alaSightingsTable .sighting .scientificName,
.alaSightingsTable .sighting .commonName {
    font-weight: bold;
}

.alaSightingsTableViewContent,
.alaSightingsMapViewContent {
}

.alaSightingsContent .sortPanel {
    background-color: #F0F0F0;
    border-width: 0px 0px 1px 0px;
    border-style: solid;
    border-color: #D9D9D9;
}

.alaSightingsTableViewContent .bulkActionContainer {
	padding-top: 1em;
	padding-bottom: 2em;
}

.alaSightingsTableViewContent .bulkActionContainer a {
    padding-left: 1em;
	padding-right: 1em;
}

.alaSightingsTable .typeColumn {
	width: 10%;
}

.alaSightingsTable .dateColumn {
	width: 10%;
}

.alaSightingsTable .sciNameColumn {
	width: 20%;
}

.alaSightingsTable .commonNameColumn {
	width: 20%
}

.alaSightingsTable .locationColumn {
	width: 20%
}

.alaSightingsTable .userColumn {
	width: 15%
}

.alaSightingsTable .altRow {
	background-color: #E0E8F0;
}

/**********************/
/* Tab View           */
/**********************/

.controlPanel {
    border-bottom: 1px solid #2D4977;
}

.displayTab {
    padding: 0.0em 1.5em 0.0em 1.5em;
    line-height: 2em;
    margin: 0px 0px 0px 4px;
    
    border-style: solid;
    border-color: #2D4977;
    border-width: 1px 1px 0px 1px;
}

.displayTab:hover {
    background-color: #D0DCE4;
}

.displayTabSelected {
    font-weight: bold;
    color: #333333;
}

/**********************/
/* My Sightings       */
/**********************/

#sightings_criteria {
	width: 85%;
	margin: 0 0 0 0;
}

#sightings_criteria .interrogative {
    font-size: 1.2em;
    text-align: left;
	padding-left: 3em;
}

#sightings_criteria th {
    width: 15%;
    padding: 0.2em;
}

#sightings_criteria td {
    width: 35%;
    padding: 0.2em;
}

.pagenumber {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

.record_dialog_content {
    white-space: nowrap;
    
}

.record_dialog_content th,
.record_dialog_content td {
    padding: 0.2em;
}

.record_dialog_content_cell {
    white-space: normal;
}

.order_type {
    padding-top: 0.5em;
}

.criteria_link {
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
}

#permalink_input {
    margin: 10px;
}

.recordCountPanel {
    margin-top: 0.5em;
}

.searchCriteriaSpacer {
	height: 9px;
}

.searchButtonContainer {
	float:right;
	position:relative;
	top:-38px;
}

/***********************/
/* open layers toolbar */
/***********************/
.olControlEditingToolbar .olControlModifyFeatureItemInactive { 
  background-position: -1px 0px; 
}
.olControlEditingToolbar .olControlModifyFeatureItemActive { 
  background-position: -1px -23px ;
}

/************************************/
/* User sending msg to another user */
/************************************/
.messageUserContainer {
	width:387px;
}

.messageUserContainer input[type=text], textarea {
	width:280px;
}

.messageUserContainer textarea {
	height:100px;
}

.messageUserMiniMap {
    width:400px;
	height:300px;
}

/**************************************/
/*   bulk data download templates and */
/*   upload records                   */
/**************************************/
table.bulkDataTableForm tbody tr th {
	width: 30%
}

/****************************************/
/* Edit Taxonomic Groups 2 column layout */
/****************************************/
.editTaxonGroupLeftColumn {
	padding: 10px;
}

.editTaxonGroupRightColumn {
	padding: 10px 0 0 50px;
}

#secondaryGroups,
#secondaryGroups tr,
#secondaryGroups tr td,
#addSecondaryGroup tr,
#addSecondaryGroup td {
    margin: 0;
    padding: 0;
}
.deleteSecondaryGroup {
    margin-left: 0;
    padding: 0 0 0 10px;
}

.hiddenTextField[name=secondaryGroups],
.hiddenTextField[name=taxonGroupPk] {
    visibility:hidden;
    width:1px;
    padding:0;
    margin:0;
    border-width:0;
}
.hiddenTextField[name=taxonGroupPk] {
    width:15px;
}

#taxonGroupMembers .heading {
    font-weight: bold;
    margin-right: 1em;
}

#bulkTaxaActions {
    position:relative;
    margin-top: 10px;
}
#bulkTaxaActions .form_action {
    position:absolute;
    right: 0px;
}
#bulkTaxaActions label {
    margin-left: 10px;
}
/*******************/
/* Search taxonomy */
/*******************/
.searchTaxonomyHeader {
	width: 80px;
}

/************************/
/* Portal preferences   */
/************************/

table.preference_table_header {
	width: 100%
}

table.preference_table_header td.right_cell {
	width: 350px;
}

table.preference_table {
	padding: 0 0 1em 0;
}

.preference_table td.description_col {
    padding: 6px 8px 6px 6px;
}

.preference_table td.description_col div {

}

.preference_table td.description_col dl {
    margin-left: 0em;
}

.preference_table td.description_col dl dd {
    margin-left: 1em;
}

.preference_table td.description_col textarea {
	/* IE7 hack */
    width: 99%;
}

.preference_table td.key_col {
	width: 200px;
	padding: 6px;
}

.preference_table td.key_col input[type=text] {
    width: 200px;
}

.preference_table td.value_col {
	width: 200px;
    padding: 6px;
}

.preference_table td.value_col input[type=text] {
    width: 200px;
}

.preference_table td.delete_col {
    width: 50px;
}
/* ... */

